fix: copy to clipboard icon not centered
Ticket: ENT-10415
Changelog: None

--- a/themes/cfbs-theme/styles/less/modulePage.less
+++ b/themes/cfbs-theme/styles/less/modulePage.less
@@ -216,7 +216,7 @@
   i.bi {
    position: absolute;
    right: 0;
-   top: 1.9rem;
+   top: 1.5rem;
    font-size: 2.1rem;
    cursor: pointer;
    background: @lightGray;
